--- a/5.3解决默认导入的错误/tsconfig.json
+++ b/5.3解决默认导入的错误/tsconfig.json
@@ -7,6 +7,8 @@
     "strictNullChecks": true,
     "removeComments": true,
     "noImplicitUseStrict": true,
+    "esModuleInterop": true,
+    "noEmitOnError": true
   },
   "include": ["./src"]
 }
