--- a/5.6练习：使用模块化优化扑克牌程序/package.json
+++ b/5.6练习：使用模块化优化扑克牌程序/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^14.14.21"
   },
   "scripts": {
-    "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts"
+    "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts",
+    "build":"rd /s /q dist & tsc"
   }
 }
